Day 19 part 2 working